# OpenVDB-Samples

./: .gitignore  README.md  commit_cmake_modules.bat  update_cmake_modules.bat
CreatingGrid/: CMakeLists.txt
CreatingGrid/src/: CreatingGrid.cpp
HelloWorld/: CMakeLists.txt
HelloWorld/src/: HelloWorld.cpp
Traw2VDB/: .project  .pydevproject  CMakeLists.txt  testTraw2VDB.bat
Traw2VDB/python/: convert_dir.py
Traw2VDB/src/: TimerLog.cpp  Traw2VDB.cpp  TrawIO.cpp  TrawIO.h  VDBIO.cpp  VDBIO.h  VDBInfo.cpp  VDBInfo.h
cmake/: FindEigen.cmake  FindMaya.cmake  FindOpenCV.cmake  FindOpenMesh.cmake  FindOpenVDB.cmake  Findboost.cmake  MSVCProperties.cmake  SetupExtLibs.cmake  UtilFindLib.cmake
vdb_conv/: CMakeLists.txt  README.md  cmake_clean.bat  test_slice_conv.bat  test_traw_conv.bat  test_vdb_conv.bat
vdb_conv/python/: convert_dir.py  render_vdb.py
vdb_conv/src/: GridData.cpp  GridData.h  ImageSliceData.cpp  ImageSliceData.h  ImageSliceIO.cpp  ImageSliceIO.h  Main.cpp  TimerLog.h  TrawData.cpp  TrawData.h  VDBConv.cpp  VDBConv.h  VDBIO.cpp  VDBIO.h
vdb_slice_view/: CMakeLists.txt  cmake_generate.bat
vdb_slice_view/src/: Traw2VDB.cpp  VDBIO.h
